<resources>
    <string name="app_name">Movilizate UCN</string>
    <string name="rut">Rut:</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="contra">Contraseña:</string>
    <string name="rut_hint">11111111&#8211;1</string>
    <string name="pass_hint">12345678</string>
    <string name="title_activity_escoger_perfil">EscogerPerfilActivity</string>
    <string name="pass">Contraseña:</string>

    <string name="feedback"><u>FeedBack</u></string>

    <string name="verSolicitud">Ver Solicitud</string>
    <string name="generarSolicitud">Generar Solicitud</string>
    <string name="solicitudEnCurso">Solicitud en Curso</string>
    <string name="solicitudAceptada">Solicitud Aceptada</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_hint">Juan Perez</string>
    <string name="title_activity_generar_solicitud_map">Solicitud de pasajero</string>
    <string name="info_hint">Recuerda estar atento a notificaciones.</string>
    <string name="textoFeedBack">Para mejorar el desarrollo y administración de la aplicación hemos creado esta sección para que puedas comuncarte con nosotros en caso de incidentes, bugs o problemas con la aplicación</string>
    <string name="nointernet">Conéctese a Internet y vuelva a intentarlo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_iniciar_ruta">Map</string>
    <string name="title_activity_generar_solicitud2">GenerarSolicitudActivity2</string>
    <string name="login">Login</string>

</resources>
