<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrarse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jose.movilizateucn.RegistrarseActivity"
    android:layout_margin="@dimen/login_margin">

    <EditText
        android:id="@+id/lblRutReg"
        android:text="@string/rut"
        android:textSize="@dimen/medium_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtRutReg"
        android:hint="@string/rut_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/lblNombreReg"
        android:text="@string/nombre"
        android:textSize="@dimen/medium_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtNombreReg"
        android:hint="@string/nombre_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="20"/>

    <EditText
        android:id="@+id/lblEmailReg"
        android:text="@string/email"
        android:textSize="@dimen/medium_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtEmailReg"
        android:hint="ejemplo@alumnos.ucn.cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/lblContraReg"
        android:text="@string/contra"
        android:textSize="@dimen/medium_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtContralReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="20"/>

    <Button
        android:id="@+id/btnRegistrarReg"
        android:text="@string/registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/cinnabargreen"
        android:layout_marginTop="@dimen/login_long_margin"/>

</LinearLayout>
